--- a/docs/DeveloperGuide.adoc
+++ b/docs/DeveloperGuide.adoc
@@ -70,21 +70,36 @@ image::ArchitectureSequenceDiagram.png[]
 
 The sections below give more details of each component.
 
-tag::ui[]
+//tag::ui[]
 [[Design-Ui]]
 === UI component
+
+==== Overview
+The `UI` consists of the `MainWindow` that is made up of static and non-static parts
+e.g.`CommandBox`, `ResultDisplay`, `StatusBarFooter` etc. All these, including the `MainWindow`, inherit from the abstract `UiPart` class.
+
+[NOTE]
+The non-static `Ui` component, `UserViewMain` is responsive to user commands. Its functionality will be
+further explained using a separate diagram.
 
 .Structure of the UI Component
 image::UiClassDiagram.png[]
 
 *API* : link:{repoURL}/src/main/java/seedu/address/ui/Ui.java[`Ui.java`]
 
-The `UI` consists of a `MainWindow` that is made up of static and non-static parts e.g.`CommandBox`, `ResultDisplay`, `StatusBarFooter` etc. All these, including the `MainWindow`, inherit from the abstract `UiPart` class.
 
-**Functionality of `UserView` classes:**
+==== Functionality of `UserViewMain`
 
-`UserViewMain` is the component responsible for switching the user view. As it needs fetch data from the `Model`, it contains
-a reference to `Logic`, hence Figure 4 shows an association between `UserViewMain` and `Logic`. The controller class of `UserViewMain` is `UserViewController`.
+`UserViewMain` is the component responsible for switching the user view. As it fetches data from `Logic`, it is associated
+with `Logic`, hence Figure 5 below shows an association between `UserViewMain` and `Logic`. The controller class of `UserViewMain` is `UserViewController`. +
+`UserViewController` and `UserViewNavigator` both contain references to the various `UiPart` views offered in +Work in order to switch between them successfully. +
+
+The diagram below shows how `UserViewMain` integrates with `Logic`, `Model` and `UiPart`.
+
+.UserViewMain integration with UI component
+image::UserViewMainClassDiagram.png[]
+
+Below is a guide to how `UserViewMain` switches the users view.
 
 Step 1: User enters a command.
 
@@ -100,13 +115,14 @@ Step 4: This component is then passed to `UserViewController` to set the current
 Step 5: Users view is then switched successfully.
 
 
+
 The `UI` component uses the JavaFx UI framework. The layout of these UI parts are defined in matching `.fxml` files that are in the `src/main/resources/view` folder. For example, the layout of the link:{repoURL}/src/main/java/seedu/address/ui/MainWindow.java[`MainWindow`] is specified in link:{repoURL}/src/main/resources/view/MainWindow.fxml[`MainWindow.fxml`]
 
 The `UI` component,
 
 * Parses and executes user commands to show user the right view using the `Logic` component.
 * Listens for changes to `Model` data so that the UI can be updated with the modified data.
-end::ui[]
+//end::ui[]
 
 [[Design-Logic]]
 === Logic component
