--- a/docs/DeveloperGuide.adoc
+++ b/docs/DeveloperGuide.adoc
@@ -699,7 +699,7 @@ was executed, we then resets the `[green]#Athletick#` state to this retrieved
 The following sequence diagram shows how the undo operation works:
 
 .Sequence diagram for undo implementation
-image::undoSQ.png[width=450]
+image::undoSQ.png[]
 
 
 ==== Redo Implementation
@@ -722,7 +722,7 @@ Implementation.]
 The activity diagram for `redo` command is as follows:
 
 .Activity diagram for `redo` command
-image::redoactivity.png[width=450]
+image::redoactivity.png[]
 
 ==== Design Considerations
 This section describes the pros and cons of the current and other alternative implementations of the undo and redo features.
