--- a/docs/DeveloperGuide.adoc
+++ b/docs/DeveloperGuide.adoc
@@ -792,6 +792,11 @@ starting character. The second loop takes each of the characters on the right of
 The last loop appends all the characters from the starting character to the ending character. After iterating through the nested loops,
 the ArrayList `result` is passed into a stream to filter out all subsets of length less than 3.
 
+`AddCommandParser` will carry out multiple checks to check the validity of the inputs. `hasItemInInventory(description)`
+and `hasSufficientQuantityToAdd(description, quantity)` methods will be called to ensure the item has sufficient stock
+left in the inventory. +
+There will also be checks to ensure that the item specified is available for sale.
+
 If description and quantity are both valid, the `ModelManager` will add the item into the sales list as shown in Figure 2.
 
 [NOTE]
@@ -803,10 +808,6 @@ The following sequence diagram which is referenced in <<GeneralLogicSD, 2.3. Log
 
 image::AddCommandCashierSeq.png[]
 
-`AddCommandParser` will carry out multiple checks to check the validity of the inputs. `hasItemInInventory(description)`
-and `hasSufficientQuantityToAdd(description, quantity)` methods will be called to ensure the item has sufficient stock
-left in the inventory. +
-There will also be checks to ensure that the item specified is available for sale.
 
 [NOTE]
 After every add command, the quantity of items in the Inventory Tab will still remain the same. The remaining stock
@@ -828,8 +829,8 @@ This feature allows an existing person in the `Address Book` to be set as a cash
 the name of an existing person.
 
 To set a cashier, the person's name inputted has to match an existing name in the `AddressBook` as shown on Members tab.
-This means that SetCommandParser requires access to the `Model` of the person package where the `AddressBook` implementation is. +
-If the person's name cannot be found in the `Model` of the person package, a response message will be shown by Leo,
+This means that SetCommandParser requires access to the `Model` of the Person package where the `AddressBook` implementation is. +
+If the person's name cannot be found in the `Model` of the Person package, a response message will be shown by Leo,
 informing the user that there is no such person.
 
 The following sequence diagram which is referenced in <<GeneralLogicSD, 2.3. Logic component: Figure 5>>, shows
