--- a/docs/DeveloperGuide.adoc
+++ b/docs/DeveloperGuide.adoc
@@ -33,8 +33,7 @@ This developer guide is targeted towards *potential developers* of the project a
 
 === Legend
 
-[TIP]
-Denotes useful tips.
+TIP: Denotes useful tips.
 
 NOTE: Denotes additional information.
 
@@ -62,8 +61,7 @@ image::ArchitectureDiagram.png[align=center]
 
 The *_Architecture Diagram_* given above explains the high-level design of the App. Given below is a quick overview of each component.
 
-[TIP]
-The `.puml` files used to create diagrams in this document can be found in the link:{repoURL}/docs/diagrams/[diagrams] folder.
+TIP: The `.puml` files used to create diagrams in this document can be found in the link:{repoURL}/docs/diagrams/[diagrams] folder.
 Refer to the <<UsingPlantUml#, Using PlantUML guide>> to learn how to create and edit diagrams.
 
 `Main` has two classes called link:{repoURL}/src/main/java/seedu/address/Main.java[`Main`] and link:{repoURL}/src/main/java/seedu/address/MainApp.java[`MainApp`]. It is responsible for,
@@ -326,67 +324,88 @@ unexpected behaviour from Alternative 1. Furthermore, Alternative 2 is in line w
 ==== Details of Implementation
 
 The undo/redo mechanism is facilitated by `CommandHistory`.
-It contains a undo/redo command history, stored internally as an `commandHistoryList` and `currentCommandPointer`.
+It contains a undo/redo command history, stored internally as an
+`commandHistoryList` and `currentCommandPointer`.
+
 Additionally, it implements the following operations:
 
 * `CommandHistory#commit()` -- Saves the current reversible command in its command history.
-* `CommandHistory#undo()` -- Undoes the most recent reversible command.
-* `CommandHistory#redo()` -- Redoes the most recent previously undone command.
-* `CommandHistory#canUndo() --
-* `CommandHistory#canRedo() --
-* `CommandHistory#reset() --
+* `CommandHistory#getUndoCommand()` -- Returns the undo command for the most recent reversible command.
+* `CommandHistory#getRedoCommand()` -- Returns the redo command for the most recent undone command.
 
-These operations are exposed in the `Model` interface as `Model#commitCommand()`, `Model#undoCommand()` and `Model#redoCommand()` respectively.
+These operations are exposed in the `Model` interface as `Model#commitCommand()`,
+`Model#getUndoCommand()` and `Model#getRedoCommand()` respectively.
 
-The undo/redo mechanism only works for commands that implements the `ReversibleCommand` interface.
-The `ReversibleCommand` interface specifies that the commands these two operations:
+The undo/redo mechanism only works for commands that implements
+the `ReversibleCommand` interface. Currently, this mechanism only works
+for commands that modifies the catalog, loan records, borrower records
+or user settings.
 
-* `ReversibleCommand#getUndoCommand()` -- Returns a command that undo the `ReversibleCommand`.
-* `ReversibleCommand#getRedoCommand()` -- Returns a command that redo the `ReversibleCommand`.
+Below, is the list of commands that can be undone/redone:
+
+Undoable/Redoable Commands:
+
+* `add`, `delete`, `edit`, `loan`, `register`, `renew`,
+`return`, `set`, `toggleui` and `unregister`.
+
+NOTE: After every `serve`, `done` and `pay` command, the command history
+is cleared. This means that you will not be able to undo after entering
+one of the commands above. This is done to ensure that the user
+do not accidentally modify books that have been loaned out and
+that payments are not refundable.
+
+The `ReversibleCommand` interface specifies that each command contains
+these three operations:
+
+* `ReversibleCommand#getUndoCommand()` -- Returns a command that undoes the `ReversibleCommand`.
+* `ReversibleCommand#getRedoCommand()` -- Returns a command that redoes the `ReversibleCommand`.
+* `ReversibleCommand#getCommandResult()` -- Returns the command result of the `ReversibleCommand`.
 
 Given below is an example usage scenario and how the undo/redo mechanism
 behaves at each step.
 
 Step 1. The user launches the application for the first time.
-The `CommandHistory` will be initialized with an empty `commandHistoryList`.
+The `CommandHistory` will be initialized with an empty `commandHistoryList` as
+shown in the figure below.
 
 .Initial state of CommandHistory
-image::UndoRedoState0.png[width=300, align=center]
+image::UndoRedoState0.png[width=250, align=center]
 
 Step 2. The user executes `delete 5` command to delete the 5th
 book in the catalog. The `delete` command calls `Model#commitCommand()`,
 causing the `delete 5` command to be saved in the `commandHistoryList`,
-and the `currentCommandPointer` is pointed to the newly inserted command.
+and the `currentCommandPointer` is pointed to the newly inserted command
+as shown in the figure below.
 
 .State of CommandHistory after `delete 5`
-image::UndoRedoState1.png[width=300, align=center]
+image::UndoRedoState1.png[width=250, align=center]
 
 Step 3. The user executes `add t/Animal Farm ...` to add a new book.
 The `add` command also calls `Model#commitCommand()`, causing the add
-command to be saved into the `catalogHistoryList`.
+command to be saved into the `commandHistoryList` as shown in the figure
+below.
 
 .State of CommandHistory after `add t/Animal Farm`
-image::UndoRedoState2.png[width=300, align=center]
+image::UndoRedoState2.png[width=250, align=center]
 
-[NOTE]
-If a command fails its execution, it will not call `Model#commitCommand()`,
+NOTE: If a command fails its execution, it will not call `Model#commitCommand()`,
 so the command will not be saved into the `commandHistoryList`.
 
 Step 4. The user now decides that adding the book was a mistake,
 and decides to undo that action by executing the `UndoCommand`.
-During the execution of the `UndoCommand`, `Model#undoCommand()`
-will be called. This would call `CommandHistory#undo()`, which
+During the execution of the `UndoCommand`, `Model#getUndoCommand()`
+will be called. This would call `CommandHistory#getUndoCommand()`, which
 will retrieve the most recent `ReversibleCommand` that was executed, which is
 the `add` command. `ReversibleCommand#getUndoCommand()` would then be called
 and the `Command` returned would be executed, undoing the add command.
 This will then shift the `currentCommandPointer` once to the left, pointing it
-to the previous `ReversibleCommand` in the `commandListHistory`.
+to the previous `ReversibleCommand` in the `commandListHistory` as shown in
+the figure below.
 
 .State of CommandHistory after `undo`
-image::UndoRedoState3.png[width=300, align=center]
+image::UndoRedoState3.png[width=250, align=center]
 
-[NOTE]
-If the `currentCommandPointer` is at index -1, pointing to no command,
+NOTE: If the `currentCommandPointer` is at index -1, pointing to no command,
 then there are no previous command to undo. The `undo` command uses
 `Model#canUndoCommand()` to check if this is the case. If so, it will
 return an error to the user rather than attempting to perform the undo.
@@ -399,39 +418,40 @@ image::UndoSequenceDiagram.png[align=center]
 NOTE: The lifeline for `UndoCommand` should end at the destroy marker (X)
 but due to a limitation of PlantUML, the lifeline reaches the end of diagram.
 
-The `redo` command does the opposite -- it calls `Model#redoCommand()`,
+The `redo` command does the opposite -- it calls `Model#getRedoCommand()`,
 which shifts the `currentCommandPointer` once to the right, pointing to
 the previously undone Command, and executes the redo command from
 `ReversibleCommand#getRedoCommand()`.
 
-[NOTE]
-If the `currentCommandPointer` is at index `catalogHistoryList.size() - 1`,
+NOTE: If the `currentCommandPointer` is at index `commandHistoryList.size() - 1`,
 pointing to the latest command, then there are no undone command to redo.
 The `redo` command uses `Model#canRedoCommand()` to check if this is the case.
-If so, it will return an error to the user rather than attempting to perform the redo.
+If so, it will return an error to the user rather than attempting to perform
+the redo.
 
 Step 5. The user then decides to execute the command `help`.
 Commands that do not modify the model, such as `help`,
-will usually not call `Model#commitCommand()`,`Model#undoCommand()` or
-`Model#redoCommand()`. Thus, the `commandHistoryList` remains unchanged.
+will usually not call `Model#commitCommand()`,`Model#getUndoCommand()` or
+`Model#getRedoCommand()`. Thus, the `commandHistoryList` remains unchanged as
+shown in the figure below.
 
 .State of CommandHistory after `help`
-image::UndoRedoState4.png[width=300, align=center]
+image::UndoRedoState4.png[width=250, align=center]
 
-Step 6. The user executes `clear`, which calls `Model#commitCommand()`.
+Step 6. The user executes `set lp/7`, which calls `Model#commitCommand()`.
 Since the `currentCommandPointer` is not pointing at the end of the `commandHistoryList`,
 all commands after the `currentCommandPointer` will be purged.
 We designed it this way because it no longer makes sense to redo the
 `add t/Animal Farm ...` command. This is the behavior that most modern
 desktop applications follow.
 
-.State of CommandHistory after `clear`
-image::UndoRedoState5.png[width=300, align=center]
+.State of CommandHistory after `set lp/7`
+image::UndoRedoState5.png[width=250, align=center]
 
 The following activity diagram summarizes what happens when a user executes a new command:
 
 .Activity diagram for committing Command
-image::CommitActivityDiagram.png[width=300, align=center]
+image::CommitActivityDiagram.png[width=250, align=center]
 
 ==== Design Considerations
 
@@ -459,7 +479,9 @@ of memory usage.
 ** Pros: Easy for future developers to understand as there are two separate stacks to keep track of the command to undo and redo.
 ** Cons: Additional time required to add and pop from the stack.
 
-We chose alternative 1 as it is easier to maintain a single data structure.
+We chose alternative 1 as it is easier to maintain a single data structure and it is
+faster compared to alternative 2.
+
 // end::undo/redo[]
 
 === Generate Loan Slip feature
@@ -1216,6 +1238,28 @@ Use case ends.
 Use case ends.
 
 [discrete]
+==== Use case: Setting loan period
+
+*MSS*
+
+1.  User wants to change the loan period of a book.
+2.  User enters the new loan period in days.
+3.  LiBerry shows the new loan period.
++
+Use case ends.
+
+*Extensions*
+
+[none]
+* 2a. The loan period entered exceeded the maximum loan
+period.
++
+[none]
+** 2a1. LiBerry shows an error message.
++
+Use case ends.
+
+[discrete]
 ==== Use case: Paying a fine
 
 *MSS*
@@ -1269,8 +1313,7 @@ User Interface
 
 Given below are instructions to test the app manually. Each of the tests are supposed to be done with sample data (The data that is preloaded when LiBerry first starts up).
 
-[NOTE]
-These instructions only provide a starting point for testers to work on; testers are expected to do more _exploratory_ testing.
+NOTE: These instructions only provide a starting point for testers to work on; testers are expected to do more _exploratory_ testing.
 
 ==== Launching and Shutting down
 
@@ -1380,7 +1423,7 @@ _{ more test cases ... }_
 . Loaning a book while in Serve mode.
 
 .. Prerequisites: LiBerry is in Serve mode, serial number is valid, book exists in the catalog and book is not on loan.
-.. Test case: `loan sn/VALID_SERIAL_NUMER` +
+.. Test case: `loan sn/VALID_SERIAL_NUMBER` +
 Expected: Book with the given `VALID_SERIAL_NUMBER` is loaned to the currently served borrower. The book is added
 to the list of currently loaned books in the borrower panel. A box stating "On Loan" and relevant details also appear
 on the book in the UI, beside the label that states its serial number.
@@ -1400,7 +1443,7 @@ Expected: Book is not loaned out. An error stating not in Serve mode is shown.
 capital 'B' character.
 .. Prerequisites: Command format is correct.
 .. Test Case: `loan sn/INVALID_SERIAL_NUMBER` +
-Expeected: Book is not loaned out. An error stating the correct format of a serial number is shown.
+Expected: Book is not loaned out. An error stating the correct format of a serial number is shown.
 
 ==== Returning a book
 
@@ -1481,6 +1524,85 @@ paid by +
 Borrower: [K0004] Hiap Seng +
 Outstanding fine: $0.00 +
 Change given: $0.90" appears on the command results display. The borrower panel now shows "Fines $0.00".
+
+==== Setting user settings
+
+. Setting user settings.
+.. Prerequisites: Value of each field in user settings does not exceed its limit.
+.. Test case: `set` +
+Expected: Current user settings would be shown in the result display.
+.. Test case: `set lp/7` +
+Expected: Sets the loan period to 7 days and the update user settings would be
+displayed in the command result display.
+.. Test case: `set lp/0` +
+Expected: Current user settings remain the same. An error message would be shown
+in the command result display.
+.. Test case: `set lp/366` +
+Expected: Same as previous test case (`set lp/0`).
+.. Test case: `set lp/-1` +
+Expected: Same as previous test case (`set lp/-1`).
+.. Test case: `set lp/7 rp/7 fi/5 mr/2` +
+Expected: Sets the loan period to 7 days, renew period to 7 days,
+fine increment to 5 cents a days and number of max renewals of loan
+to 2. The updated user settings would be displayed in the command result display.
+.. Other incorrect pay commands to try: `set abc`, `set 7` +
+Expected: Current user settings remain the same. Error details shown in the command result display.
+
+==== Undoing previous command
+
+. Undoing a command immediately after a executing an undoable command.
+
+.. Prerequisites: Command must be undoable.
+.. Undoable Commands: +
+`add`, `delete`, `edit`, `loan`, `register`, `renew`,
+`return`, `set`, `toggleui` and `unregister`.
+.. Test case: `add t/VALID_TITLE a/VALID_AUTHOR`, followed by `undo` +
+Expected: When `add t/VALID_TITLE a/VALID_AUTHOR` is entered, a book
+with `VALID_TITLE` and `VALID_AUTHOR` will be added to the catalog. After `undo`
+is entered, the added book should be removed from the catalog.
+.. You can try the undo command with other valid undoable commands as shown above.
+
+. Undoing immediately after an undo command.
+** Prerequisites: Must have enough undoable commands to undo.
+** Test case: `add t/VALID_TITLE a/VALID_AUTHOR`, followed by `register n/VALID_NAME
+p/VALID_PHONE_NUMBER e/VALID_EMAIL`, `undo` and `undo` +
+Expected: When `add t/VALID_TITLE a/VALID_AUTHOR` is entered, a book
+with `VALID_TITLE` and `VALID_AUTHOR` will be added to the catalog.
+After `register n/VALID_NAME p/VALID_PHONE_NUMBER e/VALID_EMAIL` is
+entered, a new borrower with `VALID_NAME`, `VALID_PHONE_NUMBER` and
+`VALID_EMAIL` will be added. The following `undo` should then remove the
+added borrower. The next `undo` should then remove the book from the catalog.
+.. You can try the undo command with other valid sequence of undoable commands.
+
+NOTE: After every `serve`, `done` and `pay` command, the command history
+is cleared. This means that you will not be able to undo after entering
+one of the commands above. This is done to ensure that the user
+do not accidentally modify books that have been loaned out and
+that payments are not refundable.
+
+=== Redoing undone command
+
+. Redoing an undone commands.
+
+.. Prerequisites: No new undoable command and
+`serve`, `done` and `pay` command executed before redoing.
+.. Undoable Commands: +
+`add`, `delete`, `edit`, `loan`, `register`, `renew`,
+`return`, `set`, `toggleui` and `unregister`.
+.. Test case: `add t/VALID_TITLE a/VALID_AUTHOR`, followed by `undo`, `clear`
+and `redo` +
+Expected: When `add t/VALID_TITLE a/VALID_AUTHOR` is entered, a book
+with `VALID_TITLE` and `VALID_AUTHOR` will be added to the catalog. After `undo`
+is entered, the added book will be removed from the catalog. After `clear` is entered,
+the catalog view will be refreshed. Since `clear` is not a undoable command,
+`redo` will redo the undone command, which adds back the removed book
+into the catalog.
+
+.. Incorrect command to try: `redo` after an undoable command or `serve`, `done` and `pay` +
+Expected: No undone command is redone and an "There are no commands to redo!"
+will be displayed in the result display.
+
+
 
 ==== Toggling UI theme
 
